--- a/src/public/CSS/teamgeist_style.css
+++ b/src/public/CSS/teamgeist_style.css
@@ -32,3 +32,9 @@ button.btn {
     width: 60%!important;
     box-shadow: 2px 2px #000000;
 }
+
+.container .player_select {
+    flex-direction: column; 
+    border: 2px solid #000;
+    padding: 2px;
+}
